@startuml

title __MODEL's Class Diagram__\n

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      class AnimalManager {
          - activeCells : Map<Coordinate, Cell>
          - animalTransaction : Map<Coordinate, Cell>
          ~ AnimalManager()
          ~ placeRandomly()
          - placeAnimal()
          ~ tick()
          - getAnimalVision()
          - breed()
          - feed()
          - feedPredator()
          - feedVegetarian()
          - moveAnimal()
          - beginTransaction()
          - newCellInTransaction()
          - commitTransaction()
          + getCell()
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      class CoordinateInfo {
          - chunk : int
          - blockId : int
          + CoordinateInfo()
          + getCoordinate()
          + getChunk()
          + getBlockId()
          + getCell()
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      class Game {
          {static} + STATE_NOT_READY : int
          {static} + STATE_INITIALIZED : int
          {static} + STATE_READY : int
          {static} + STATE_STARTING : int
          {static} + STATE_RUNNING : int
          {static} + STATE_STOPPING : int
          {static} + STATE_STOPPED : int
          - day : AtomicInteger
          - state : int
          {static} - yearLength : int
          {static} - periodLength : int
          + tick()
          + getDay()
          + getYearProgress()
          - grassTick()
          + getAnimalManager()
          + getCoordinateInfo()
          + getWorldMap()
          + setWorldMap()
          - addGrass()
          - getGrassMultiplier()
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      class Settings {
          {static} + SIGMA_COEFFICIENT : double
          {static} + NETWORK_DEPTH : int
          {static} + VISION_POINTS_PER_TYPE : int
          {static} + VISION_TYPES : int
          {static} + VISION_POINTS : int
          {static} + MUTATION_RATE : Double
          {static} + WOLF_SPAWN_RATE : double
          {static} + HARE_SPAWN_RATE : double
          {static} + GRASS_SPAWN_RATE : double
          {static} + GRASS_SPREAD_RATE : double
          {static} + GRASS_GROW_RATE : double
          {static} + GRASS_SHRINK_RATE : double
          {static} + WOLF_SIGHT : int
          {static} + WOLF_FULL_SATIETY : int
          {static} + WOLF_FULL_HP : int
          {static} + WOLF_INIT_SATIETY : int
          {static} + WOLF_INIT_HP : int
          {static} + HARE_SIGHT : int
          {static} + HARE_FULL_SATIETY : int
          {static} + HARE_FULL_HP : int
          {static} + HARE_INIT_SATIETY : int
          {static} + HARE_INIT_HP : int
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      class Worker {
          {static} - w : Worker
          - daemonWorker : ExecutorService
          {static} + getWorker()
          + submit()
          + submit()
      }
    }
  }
  

  AnimalManager o-- WorldMap : worldMap
  CoordinateInfo o-- Coordinate : coordinate
  CoordinateInfo o-- Cell : cell
  Game o-- WorldMap : worldMap
  Game o-- AnimalManager : animalManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
